<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:gravity="center"
	    android:layout_weight="1">
	    <Button
	        android:id="@+id/button_start_service"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_start_service" />
	    <Button
	        android:id="@+id/button_stop_service"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_stop_service" 
	        android:paddingBottom="20dp"/>
	    <Button
	        android:id="@+id/button_start_player"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_start_player" />
	
	    <Button
	        android:id="@+id/button_stop_player"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_stop_player" />
	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:gravity="bottom|left"
	    android:layout_weight="3">
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/note"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>
</LinearLayout>